// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the button with tooltipText correctly 1`] = `
<button
  className="Button rectangle full only-icon sc-htpNat bJyeSx"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
  <div
    className="Badge Button__tooltip-text darkGray xs sc-bdVaJa hgMQWD"
  >
    Testing tooltip text
  </div>
</button>
`;

exports[`Button should render the circle shaped button correctly 1`] = `
<button
  className="Button circle full only-icon sc-htpNat fmHQVU"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the default button correctly 1`] = `
<button
  className="Button rectangle full only-icon sc-htpNat bJyeSx"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the disabled button correctly 1`] = `
<button
  className="Button rectangle disabled full only-icon sc-htpNat cyJpvl"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost and disabled button correctly 1`] = `
<button
  className="Button rectangle disabled ghost only-icon sc-htpNat jgTeyJ"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost button correctly 1`] = `
<button
  className="Button rectangle ghost only-icon sc-htpNat WNhra"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the textOnly and ghost button correctly 1`] = `
<button
  className="Button rectangle only-icon textOnly sc-htpNat byptyz"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;
